--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd-style": "^3.6.1",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-css-theme-switcher": "^0.3.0",
