--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "antd": "^5.14.2",
     "antd-style": "^3.6.1",
     "axios": "^1.6.7",
+    "country-flag-icons": "^1.5.9",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "query-string": "^9.0.0",
@@ -29,6 +32,7 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "yup": "^1.3.3"
