--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
     "antd": "^5.14.2",
-    "antd-style": "^3.6.1",
     "axios": "^1.6.7",
     "country-flag-icons": "^1.5.9",
+    "dayjs": "^1.11.10",
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
-    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.5",
@@ -56,7 +55,6 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "pwa-asset-generator": "^6.3.1",
-    "sass": "^1.71.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^5.2.2",
