--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
