--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
     "antd": "^5.14.2",
+    "antd-style": "^3.6.1",
     "axios": "^1.6.7",
     "country-flag-icons": "^1.5.9",
     "dayjs": "^1.11.10",
@@ -52,11 +53,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "pwa-asset-generator": "^6.3.1",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-pwa": "^0.19.0",
