--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
     "antd": "^5.14.2",
-    "antd-style": "^3.6.1",
     "axios": "^1.6.7",
     "country-flag-icons": "^1.5.9",
     "dayjs": "^1.11.10",
@@ -46,7 +45,6 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -55,6 +53,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "^3.2.5",
     "pwa-asset-generator": "^6.3.1",
+    "sass": "^1.72.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-pwa": "^0.19.0",
